update index.html, added config for emails

--- a/project/apps/pages/templates/pages/index.html
+++ b/project/apps/pages/templates/pages/index.html
@@ -3,16 +3,16 @@
 {% load bootstrap3 %}
 
 {% block title %}
-    Blog
+    Django Basic
 {% endblock %}
 
 {% block content %}
 
-    <div class="site-index">
-        <div class="jumbotron">
-            <h1>Congratulations!</h1>
-            <p class="lead">You have successfully created your Yii-powered application.</p>
-        </div>
+<div class="site-index">
+    <div class="jumbotron">
+        <h1>Congratulations!</h1>
+        <p class="lead">You have successfully created your Django application.</p>
     </div>
+</div>
 
 {% endblock %}
