--- a/project/templates/layouts/main.html
+++ b/project/templates/layouts/main.html
@@ -15,7 +15,7 @@
         <nav id="w1" class="navbar-inverse navbar-fixed-top navbar" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{% url 'index' %}">{% trans "Django Basic Template" %}</a>
+                    <a class="navbar-brand" href="{% url 'index' %}">{% trans "Django Basic" %}</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav navbar-right nav">
@@ -60,7 +60,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="pull-left">© Django Basic Template {% now "Y" %}</p>
+            <p class="pull-left">© Django Basic {% now "Y" %}</p>
             <ul>
                 <li>
                     <a href="{% url 'cms.article' slug='terms-and-conditions' %}">{% trans "Terms & Conditions" %}</a>
