--- a/project/templates/layouts/main.html
+++ b/project/templates/layouts/main.html
@@ -15,12 +15,12 @@
         <nav id="w1" class="navbar-inverse navbar-fixed-top navbar" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{% url 'index' %}">{% trans "Django Basic" %}</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">{% trans "Django Basic" %}</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav navbar-right nav">
-                        <li class="{% active_page request "index" %}">
-                            <a href="{% url 'index' %}">{% trans "Home" %}</a>
+                        <li class="{% active_page request "home" %}">
+                            <a href="{% url 'home' %}">{% trans "Home" %}</a>
                         </li>
                         <li class="{% active_page request "cms.article" slug='about-us' %}">
                             <a href="{% url 'cms.article' slug='about-us' %}">{% trans "About Us" %}</a>
